  - support "listfiles" with arbitrary storage plugins
  - support relative positions in "addid"
  - fix relative positions in "move" and "moveid"
* database
  - proxy: require MPD 0.20 or later
  - proxy: require libmpdclient 2.11 or later
  - proxy: split search into chunks to avoid exceeding the output buffer
  - upnp: support libnpupnp instead of libupnp
* decoder
  - openmpt: new plugin
  - wavpack: fix WVC file support
* output
  - oss: support DSD over PCM
  - pipewire: new plugin
  - snapcast: new plugin
* tags
  - new tags "ComposerSort", "Ensemble", "Movement", "MovementNumber", and "Location"
* new build-time dependency: libfmt

ver 0.22.11 (2021/08/24)
* protocol
  - fix "albumart" crash
* filter
  - ffmpeg: pass "channel_layout" instead of "channels" to buffersrc
  - ffmpeg: fix "av_buffersink_get_frame() failed: Resource temporarily unavailable"
  - ffmpeg: support double-precision samples (by converting to single precision)
* Android
  - build with NDK r23
  - playlist_directory defaults to "/sdcard/Android/data/org.musicpd/files/playlists"

ver 0.22.10 (2021/08/06)
* protocol
  - support "albumart" for virtual tracks in CUE sheets
* database
  - simple: fix crash bug
  - simple: fix absolute paths in CUE "as_directory" entries
  - simple: prune CUE entries from database for non-existent songs
* input
  - curl: fix crash bug after stream with Icy metadata was closed by peer
  - tidal: remove defunct unmaintained plugin
* tags
  - fix crash caused by bug in TagBuilder and a few potential reference leaks
* output
  - httpd: fix missing tag after seeking into a new song
  - oss: fix channel order of multi-channel files
* mixer
  - alsa: fix yet more rounding errors

ver 0.22.9 (2021/06/23)
* database
  - simple: load all .mpdignore files of all parent directories
* tags
  - fix "readcomments" and "readpicture" on remote files with ID3 tags
* decoder
  - ffmpeg: support the tags "sort_album", "album-sort", "artist-sort"