@@ -10,6 +10,8 @@ ver 0.23 (not yet released)
   - proxy: require libmpdclient 2.11 or later
   - proxy: split search into chunks to avoid exceeding the output buffer
   - upnp: support libnpupnp instead of libupnp
+* archive
+  - zzip, iso9660: ignore file names which are invalid UTF-8
 * decoder
   - openmpt: new plugin
   - wavpack: fix WVC file support
